--- a/LED_Matrix_Controller.qsf
+++ b/LED_Matrix_Controller.qsf
@@ -115,4 +115,5 @@ set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name VERILOG_FILE single_port_ram.v
 set_global_assignment -name SIGNALTAP_FILE output_files/spi.stp
 set_global_assignment -name VERILOG_FILE crc_8bit.v
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
